--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,18 +1,12 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-/* Common styles */
-@import url('./reset.css');
+
 @import url('./base.css');
 @import url('./container.css');
-@import url('./animations.css');
-
-/* Sections style */
+@import url('./About-Us-Section.css');
+@import url('./FAQ-Section.css');
+@import url('./Feedback-Section.css');
+@import url('./Footer.css');
+@import url('./Furniture-Details-Modal.css');
+@import url('./Furniture-List-Section.css');
 @import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+@import url('./Hero-Section.css');
+@import url('./Order-Modal.css');
