fixed footer again

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,7 +4,7 @@
 @import url('./About-Us-Section.css');
 @import url('./FAQ-Section.css');
 @import url('./Feedback-Section.css');
-@import url('./Footer.css');
+@import url('./footer.css');
 @import url('./Furniture-Details-Modal.css');
 @import url('./Furniture-List-Section.css');
 @import url('./header.css');
