add order-modal and styles

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,3 @@
-
 @import url('./base.css');
 @import url('./container.css');
 @import url('./About-Us-Section.css');
@@ -9,4 +8,4 @@
 @import url('./Furniture-List-Section.css');
 @import url('./header.css');
 @import url('./Hero-Section.css');
-@import url('./Order-Modal.css');
+@import url('./order-modal.css');
