--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,14 +4,14 @@
         <nav class="navigation" role="navigation">
             <a class="logo-header" href="../index.html">
                 <svg class="icon-logo-company" type="button" width="158" height="35">
-                    <use href="../img/icons.svg#icon-company-logo"></use>
+                    <use href="./img/icons.svg#icon-company-logo"></use>
                 </svg>
             </a>
 
             <button class="menu-toggle-btn" type="button" id="menu-open-btn" aria-controls="mobile-menu-container"
                 aria-expanded="false">
                 <svg class="icon-logo-company" type="button" width="32" height="32">
-                    <use href="../img/icons.svg#icon-burger-menu"></use>
+                    <use href="./img/icons.svg#icon-burger-menu"></use>
                 </svg>
             </button>
 
@@ -37,13 +37,13 @@
 
                 <a class="logo-header" href="../index.html">
                     <svg class="icon-logo-company" type="button" width="158" height="35">
-                        <use href="../img/icons.svg#icon-company-logo"></use>
+                        <use href="./img/icons.svg#icon-company-logo"></use>
                     </svg>
                 </a>
 
                 <button class="menu-close-btn" id="menu-close-btn">
                     <svg class="icon-logo-company" type="button" width="32" height="32">
-                        <use href="../img/icons.svg#icon-x-close"></use>
+                        <use href="./img/icons.svg#icon-x-close"></use>
                     </svg>
                 </button>
 
@@ -67,4 +67,5 @@
             </div>
         </nav>
     </div>
+
 
