--- a/src/css/header.css
+++ b/src/css/header.css
@@ -42,7 +42,6 @@
     transform: translateX(100%);
 }
 
-
 .mobile-menu.is-open {
     opacity: 1;
     visibility: visible;
@@ -70,7 +69,6 @@
     gap: 32px;
     margin-top: 32px;
 }
-
 
 .menu-content-group .btn-header {
     display: flex;
@@ -116,6 +114,30 @@
         align-items: flex-end;
     }
 
+    .menu-overlay {
+        position: fixed;
+        top: 72px;
+        left: 0;
+        width: 100%;
+        height: calc(100% - 72px);
+        background-color: rgba(8, 12, 9, 0.4);
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        z-index: 50;
+    }
+
+    .menu-overlay.is-visible {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+    }
+
+    .mobile-menu {
+        z-index: 100;
+    }
+
     .mobile-menu .logo-header {
         display: none;
     }
@@ -148,11 +170,6 @@
         right: 66px;
 
     }
-
-    .menu-content-group .btn-header {
-        margin-left: 25px;
-    }
-
 }
 
 @media screen and (min-width: 1440px) {
@@ -211,6 +228,4 @@
     .menu-toggle-btn {
         display: none;
     }
-
-
 }
