--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,16 +1,16 @@
 <header class="page-header">
     <div class="container">
         <nav class="navigation" role="navigation">
-            <a class="logo-header" href="../index.html">
+            <a class="logo-header" href="./index.html">
                 <svg class="icon-logo-company" type="button" width="158" height="35">
-                    <use href="../img/icons.svg#icon-company-logo"></use>
+                    <use href="./img/icons.svg#icon-company-logo"></use>
                 </svg>
             </a>
 
             <button class="menu-toggle-btn" type="button" id="menu-open-btn" aria-controls="mobile-menu-container"
                 aria-expanded="false">
                 <svg class="icon-logo-company" type="button" width="32" height="32">
-                    <use href="../img/icons.svg#icon-burger-menu"></use>
+                    <use href="./img/icons.svg#icon-burger-menu"></use>
                 </svg>
             </button>
 
@@ -34,15 +34,15 @@
 
             <div class="mobile-menu" id="mobile-menu-container">
 
-                <a class="logo-header" href="../index.html">
+                <a class="logo-header" href="./index.html">
                     <svg class="icon-logo-company" type="button" width="158" height="35">
-                        <use href="../img/icons.svg#icon-company-logo"></use>
+                        <use href="./img/icons.svg#icon-company-logo"></use>
                     </svg>
                 </a>
 
                 <button class="menu-close-btn" id="menu-close-btn">
                     <svg class="icon-logo-company" type="button" width="32" height="32">
-                        <use href="../img/icons.svg#icon-x-close"></use>
+                        <use href="./img/icons.svg#icon-x-close"></use>
                     </svg>
                 </button>
 
@@ -63,7 +63,9 @@
                     </ul>
                     <button class="btn-header" id="desktop-btn">До покупок</button>
                 </div>
+
             </div>
         </nav>
     </div>
 </header>
+<div class="menu-overlay" id="menu-overlay"></div>
