add more styles and js for closing modal

--- a/src/partials/Order-Modal.html
+++ b/src/partials/Order-Modal.html
@@ -1,6 +1,8 @@
-<div class="modal-overlay is-open">
+<button type="button" data-modal-open>open</button>
+<!--  -->
+<div class="modal-overlay" data-modal>
   <div class="modal">
-    <button type="button" class="close-button">
+    <button type="button" class="close-button" data-modal-close>
       <svg width="32" height="32" class="icon-close">
         <use href="/img/icons.svg#icon-x-close"></use>
       </svg>
