add scroll to btn

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,3 @@
-
 <header class="page-header">
     <div class="container">
         <nav class="navigation" role="navigation">
@@ -62,7 +61,7 @@
                             <a href="#feedback">Відгуки</a>
                         </li>
                     </ul>
-                    <button class="btn-header" id="desktop-btn">До покупок</button>
+                    <button class="btn-header" id="mobile-btn">До покупок</button>
                 </div>
 
             </div>
