--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,4 +8,4 @@
 @import url('./Furniture-List-Section.css');
 @import url('./header.css');
 @import url('./Hero-Section.css');
-@import url('./order-modal.css');
+@import url('./Order-Modal.css');
