--- a/src/css/FAQ-Section.css
+++ b/src/css/FAQ-Section.css
@@ -60,7 +60,7 @@ min-width: 335px;
 
 .ac-trigger:hover,
 .ac-trigger:focus {
-    color: var(--color-neutral-dark);
+    color:#101828;
 }
 
 .ac-trigger {
