--- a/src/partials/FAQ-Section.html
+++ b/src/partials/FAQ-Section.html
@@ -6,9 +6,9 @@
                 <p class="ac-header">
                     <button type="button" class="ac-trigger">
                         Як здійснюється доставка меблів?
-                        <!-- <svg width="32" height="32" class="ac-trigger-icon">
-                            <use href="/img/svg/icon.svg#chevron-down"></use>
-                        </svg> -->
+                        <svg width="32" height="32" class="ac-trigger-icon">
+                            <use href=""></use>
+                        </svg>
                     </button>
                 </p>
                 <div class="ac-panel">
@@ -22,9 +22,9 @@
                 <p class="ac-header">
                     <button type="button" class="ac-trigger">
                         Чи є можливість вибрати колір або матеріал?
-                        <!-- <svg width="32" height="32" class="ac-trigger-icon">
-                            <use href="/img/svg/icon.svg#chevron-down"></use>
-                        </svg> -->
+                        <svg width="32" height="32" class="ac-trigger-icon">
+                            <use href=""></use>
+                        </svg>
                     </button>
                 </p>
                 <div class="ac-panel">
@@ -38,9 +38,9 @@
                 <p class="ac-header">
                     <button type="button" class="ac-trigger">
                         Чи можна повернути товар, якщо він не підійшов?
-                        <!-- <svg width="32" height="32" class="ac-trigger-icon">
-                            <use href="/img/svg/icon.svg#chevron-down"></use>
-                        </svg> -->
+                        <svg width="32" height="32" class="ac-trigger-icon">
+                            <use href=""></use>
+                        </svg>
                     </button>
                 </p>
                 <div class="ac-panel">
@@ -54,9 +54,9 @@
                 <p class="ac-header">
                     <button type="button" class="ac-trigger">
                         Чи надаєте ви послугу збирання меблів?
-                        <!-- <svg width="32" height="32" class="ac-trigger-icon">
-                            <use href="/img/svg/icon.svg#chevron-down"></use>
-                        </svg> -->
+                        <svg width="32" height="32" class="ac-trigger-icon">
+                            <use href=""></use>
+                        </svg>
                     </button>
                 </p>
                 <div class="ac-panel">
@@ -71,7 +71,7 @@
                     <button type="button" class="ac-trigger">
                         Як здійснити оплату?
                         <svg width="32" height="32" class="ac-trigger-icon">
-                            <use href="/img/svg/icon.svg#chevron-down"></use>
+                            <use href=""></use>
                         </svg>
                     </button>
                 </p>
