--- a/src/partials/Order-Modal.html
+++ b/src/partials/Order-Modal.html
@@ -8,16 +8,15 @@
       </svg>
     </button>
     <h2 class="modal-title">Замовити</h2>
-    <form class="modal-form" novalidate>
+    <form class="modal-form">
       <div class="modal-form-item">
         <label for="modal-form-name" class="modal-form-label">Ім'я*</label>
         <input
           type="text"
           id="modal-form-name"
-          name="modal-form-name"
+          name="name"
           class="modal-form-input"
           placeholder="Дмитро"
-          required
         />
       </div>
       <div class="modal-form-item">
@@ -25,10 +24,9 @@
         <input
           type="tel"
           id="modal-form-phone"
-          name="modal-form-phone"
+          name="phone"
           class="modal-form-input"
           placeholder="38 099 123 22 11"
-          required
         />
       </div>
       <div class="modal-form-item">
@@ -37,7 +35,7 @@
         >
         <textarea
           id="modal-form-comment"
-          name="modal-form-comment"
+          name="comment"
           class="modal-form-input comment"
           placeholder="Введіть ваш коментар..."
           rows="4"
