--- a/src/partials/FAQ-Section.html
+++ b/src/partials/FAQ-Section.html
@@ -7,7 +7,7 @@
                     <button type="button" class="ac-trigger">
                         Як здійснюється доставка меблів?
                         <svg width="32" height="32" class="ac-trigger-icon">
-                            <use href=""></use>
+                            <use href="../img/svg/arrow-down.svg.svg"></use>
                         </svg>
                     </button>
                 </p>
@@ -23,7 +23,7 @@
                     <button type="button" class="ac-trigger">
                         Чи є можливість вибрати колір або матеріал?
                         <svg width="32" height="32" class="ac-trigger-icon">
-                            <use href=""></use>
+                            <use href="../img/svg/arrow-down.svg.svg"></use>
                         </svg>
                     </button>
                 </p>
@@ -39,7 +39,7 @@
                     <button type="button" class="ac-trigger">
                         Чи можна повернути товар, якщо він не підійшов?
                         <svg width="32" height="32" class="ac-trigger-icon">
-                            <use href=""></use>
+                            <use href="../img/svg/arrow-down.svg.svg"></use>
                         </svg>
                     </button>
                 </p>
@@ -55,7 +55,7 @@
                     <button type="button" class="ac-trigger">
                         Чи надаєте ви послугу збирання меблів?
                         <svg width="32" height="32" class="ac-trigger-icon">
-                            <use href=""></use>
+                            <use href="../img/svg/arrow-down.svg.svg"></use>
                         </svg>
                     </button>
                 </p>
@@ -71,7 +71,7 @@
                     <button type="button" class="ac-trigger">
                         Як здійснити оплату?
                         <svg width="32" height="32" class="ac-trigger-icon">
-                            <use href=""></use>
+                            <use href="../img/svg/arrow-down.svg.svg"></use>
                         </svg>
                     </button>
                 </p>
