--- a/src/css/FAQ-Section.css
+++ b/src/css/FAQ-Section.css
@@ -14,6 +14,12 @@ padding: 48px 0;
     justify-content: center;
     align-items: center;
 }
+.faq-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 120%;
+    letter-spacing: .01em;
+}
 
 .faq-section .faq-title {
     text-align: center; 
@@ -50,6 +56,7 @@ min-width: 335px;
     border-bottom: 1px solid rgba(8, 12, 9, 0.15) !important;
 }
 
+
 .ac .ac-header {
     margin: 0;
     padding: 0;
@@ -64,18 +71,16 @@ min-width: 335px;
 }
 
 .ac-trigger {
-font-family: "Raleway", sans-serif !important;
+    font-family: "Raleway", sans-serif !important;
     font-weight: 700;
     font-size: 16px !important;
     line-height: 160% !important;
-    padding: 0 !important;
+    /* padding: 8px 32px 8px 8px; */
     display: flex !important;
-    justify-content: space-between;
+    justify-content: space-between !important ;
     align-items: center;
     text-align: left;
     width: 100%;
-    padding: 8px 32px 8px 8px;
-    display: block;
     cursor: pointer;
     background-color: transparent;
     transition: color 250ms cubic-bezier(0.77, 0, 0.18, 1);
@@ -84,16 +89,47 @@ font-family: "Raleway", sans-serif !important;
     margin: 0;
     border: 0;
     color: #080c09;
+    /* padding-right: 44px !important; */
 }
 
+.ac-trigger .ac-trigger-icon {
+    transition: transform 250ms cubic-bezier(0.77, 0, 0.18, 1) ;
+}
+
+.ac .ac-panel {
+    overflow: hidden;
+    transition-property: height, visibility;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.77, 0, 0.18, 1);
+}
 .ac-panel {
 
 }
 
 .ac-text {
-
+    font-family: var(--font-family) !important;
+    font-weight: 400 !important;
+    font-size: 16px !important;
+    line-height: 160% !important;
 }
 
-.ac-trigger-icon {
+@media only screen and (min-width: 768px) {
+    .ac {
+        padding: 20px 0;
+    }
 
+    .ac-trigger {
+        font-size: 18px !important;
+    }
+
+    .ac-text {
+        font-size: 18px !important;
+        color: var(--color-);
+        padding: 8px;
+        margin: 0;
+    }
+}
+
+.ac.is-active .ac-trigger .ac-trigger-icon {
+    transform: rotate(-180deg);
 }
