--- a/src/partials/FAQ-Section.html
+++ b/src/partials/FAQ-Section.html
@@ -7,7 +7,7 @@
                     <button type="button" class="ac-trigger">
                         Як здійснюється доставка меблів?
                         <svg width="32" height="32" class="ac-trigger-icon">
-                            <use href="./img/svg/arrow-down.svg.svg"></use>
+                            <use href="./img/icons.svg#icon-icon-faq"></use>
                         </svg>
                     </button>
                 </p>
@@ -23,7 +23,7 @@
                     <button type="button" class="ac-trigger">
                         Чи є можливість вибрати колір або матеріал?
                         <svg width="32" height="32" class="ac-trigger-icon">
-                            <use href="./img/svg/arrow-down.svg.svg"></use>
+                            <use href="./img/icons.svg#icon-icon-faq"></use>
                         </svg>
                     </button>
                 </p>
@@ -57,7 +57,7 @@
                         Чи надаєте ви послугу збирання меблів?
                         <svg width="32" height="32" class="ac-trigger-icon">
 
-                            <use href="../img/svg/arrow-down.svg.svg"></use>
+                            <use href="./img/icons.svg#icon-icon-faq"></use>
                         </svg>
                     </button>
                 </p>
@@ -73,7 +73,7 @@
                     <button type="button" class="ac-trigger">
                         Як здійснити оплату?
                         <svg width="32" height="32" class="ac-trigger-icon">
-                            <use href="../img/svg/arrow-down.svg.svg"></use>
+                            <use href="./img/icons.svg#icon-icon-faq"></use>
                         </svg>
                     </button>
                 </p>
