--- a/src/partials/Feedback-Section.html
+++ b/src/partials/Feedback-Section.html
@@ -1,5 +1,5 @@
 <section class="feedback-section" id="#Feedback-Section">
-  <div class="container hero-container">
+  <div class="container feedback-container">
     <div class="feedback-text-wrapper">
       <h2 class="feedback-header">Відгуки клієнтів</h2>
       <p class="feedback-text">
@@ -11,11 +11,13 @@
       <div class="swiper-wrapper">
         <!-- js creates carosel -->
       </div>
-
+    </div>
+    <div class="swiper-interaction-wrapp">
       <div class="swiper-pagination"></div>
-
-      <button type="button" class="swiper-button-prev"></button>
-      <button type="button" class="swiper-button-next"></button>
+      <div class="btn-wrapper">
+        <button type="button" class="swiper-button-prev"></button>
+        <button type="button" class="swiper-button-next"></button>
+      </div>
     </div>
   </div>
 </section>
