--- a/src/css/Furniture-List-Section.css
+++ b/src/css/Furniture-List-Section.css
@@ -1,4 +1,4 @@
-h2 {
+/* h2 {
   font-weight: 700;
   font-size: 48px;
   line-height: 1.2;
@@ -13,7 +13,7 @@ p {
   color: #080c09;
   margin-top: 16px;
   margin-bottom: 0;
-}
+} */
 .our-furniture {
   margin: 80px 64px 40px 64px;
 }
