--- a/src/partials/About-Us-Section.html
+++ b/src/partials/About-Us-Section.html
@@ -8,13 +8,13 @@
         </div>
         <div class="about-us-cont-image">
         <picture>
-            <source srcset="../img/desktop/about-us-section-dt-min.png 1x , ../img/desktop/about-us-section-dt@2x-min.png 2x"
+            <source srcset="/img/desktop/about-us-section-dt-min.png 1x , /img/desktop/about-us-section-dt@2x-min.png 2x"
             media="(min-width: 1440px)"/>     
 
-            <source srcset="../img/tablet/about-us-section-tb-min.png 1x , ../img/tablet/about-us-section-tb@2x-min.png 2x"
+            <source srcset="/img/tablet/about-us-section-tb-min.png 1x , /img/tablet/about-us-section-tb@2x-min.png 2x"
                 media="(min-width: 764px)"/>
             
-            <source srcset="./img/mobile/About-Us-Section-mb-min.png 1x , ./img/mobile/About-Us-Section-mb@2x-min.png 2x" />
+            <source srcset="/img/mobile/About-Us-Section-mb-min.png 1x , /img/mobile/About-Us-Section-mb@2x-min.png 2x" />
             <img
                 class="about-us-image"
                 src="./img/mobile/About-Us-Section-mb-min.png"
