--- a/src/css/Feedback-Section.css
+++ b/src/css/Feedback-Section.css
@@ -75,6 +75,49 @@
     padding: 12px;
     width: 48px;
     height: 48px;
+
+    text-decoration: none;
+    border: none;
+    border-radius: 100px;
+    cursor: pointer;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow:
+            0 1px 2px 0 rgba(8, 12, 9, 0.05),
+            inset 0 -2px 1px 0 rgba(0, 0, 0, 0.2),
+            inset 0 0 0 1px rgba(8, 12, 9, 0.15),
+            inset 0 2px 1px 0 rgba(255, 255, 255, 0.25),
+            inset 0 32px 24px 0 rgba(8, 12, 9, 0.05);
+}
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+    background-color: #975052;
+        box-shadow:
+            0 4px 12px rgba(107, 6, 9, 0.3),
+            inset 0 -2px 1px 0 rgba(0, 0, 0, 0.2),
+            inset 0 0 0 1px rgba(8, 12, 9, 0.15),
+            inset 0 2px 1px 0 rgba(255, 255, 255, 0.25);
+    outline: none;
+    fill: #fff;
+}
+
+.swiper-button-next:focus,
+.swiper-button-prev:focus {
+    background-color: #975052;
+    box-shadow:
+            0 4px 12px rgba(107, 6, 9, 0.3),
+            inset 0 -2px 1px 0 rgba(0, 0, 0, 0.2),
+            inset 0 0 0 1px rgba(8, 12, 9, 0.15),
+            inset 0 2px 1px 0 rgba(255, 255, 255, 0.25);
+    outline: none;
+    fill: #fff;
+}
+
+.swiper-button-next:disabled,
+.swiper-button-prev:disabled {
+    background: #f2f2f2;
+    opacity: 0.3;
+    fill: #080c09;
 }
 
 .swiper-pagination{
@@ -99,4 +142,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.raty-star {
+    fill: #080c09;
+    width: 32px;
+    height: 32px;
+    display: inline-block;
 }
