--- a/src/partials/Feedback-Section.html
+++ b/src/partials/Feedback-Section.html
@@ -15,8 +15,16 @@
     <div class="swiper-interaction-wrapp">
       <div class="swiper-pagination"></div>
       <div class="btn-wrapper">
-        <button type="button" class="swiper-button-prev"></button>
-        <button type="button" class="swiper-button-next"></button>
+        <button type="button" class="swiper-button-prev">
+          <svg class="icon-left-arrow" type="button" width="158" height="35">
+            <use href="./img/icons.svg#icon-left-arrow"></use>
+          </svg>
+        </button>
+        <button type="button" class="swiper-button-next">
+          <svg class="icon-right-arrow" type="button" width="158" height="35">
+            <use href="./img/icons.svg#icon-right-arrow"></use>
+          </svg>
+        </button>
       </div>
     </div>
   </div>
