--- a/src/partials/Furniture-List-Section.html
+++ b/src/partials/Furniture-List-Section.html
@@ -17,6 +17,7 @@
             <img
               src="/img/image-categories/A-stylish-furniture-showroom-min.png"
               alt="all articles"
+              class="img-categories"
               width="166"
               height="122"
               loading="lazy"
@@ -206,8 +207,6 @@
     </div>
     <ul class="furniture-list"></ul>
 
-    <button class="load-more-btn">Завантажити ще</button>
+    <button class="load-more-btn">Показати ще</button>
   </div>
 </section>
-
-
