Add data-category-id attributes to list items

--- a/src/partials/Furniture-List-Section.html
+++ b/src/partials/Furniture-List-Section.html
@@ -7,7 +7,7 @@
 
     <div class="categories-list">
       <ul class="categories-list-item">
-        <li>
+        <li data-category-id="all">
           <picture
             ><source
               srcset="
@@ -23,7 +23,7 @@
               loading="lazy"
           /></picture>
         </li>
-        <li>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7b8">
           <picture
             ><source
               srcset="
@@ -38,7 +38,7 @@
               loading="lazy"
           /></picture>
         </li>
-        <li>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7b9">
           <picture
             ><source
               srcset="
@@ -53,7 +53,7 @@
               loading="lazy"
           /></picture>
         </li>
-        <li>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7ba">
           <picture
             ><source
               srcset="
@@ -68,7 +68,7 @@
               loading="lazy"
           /></picture>
         </li>
-        <li>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7bb">
           <picture
             ><source
               srcset="
@@ -83,7 +83,7 @@
               loading="lazy"
           /></picture>
         </li>
-        <li>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7bc">
           <picture
             ><source
               srcset="
@@ -98,7 +98,7 @@
               loading="lazy"
           /></picture>
         </li>
-        <li>
+        <li data-category="66504a50a1b2c3d4e5f6a7bd">
           <picture
             ><source
               srcset="
@@ -113,7 +113,7 @@
               loading="lazy"
           /></picture>
         </li>
-        <li>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7be">
           <picture
             ><source
               srcset="
@@ -128,7 +128,7 @@
               loading="lazy"
           /></picture>
         </li>
-        <li>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7bf">
           <picture
             ><source
               srcset="
@@ -143,7 +143,7 @@
               loading="lazy"
           /></picture>
         </li>
-        <li>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7c0">
           <picture
             ><source
               srcset="
@@ -158,7 +158,7 @@
               loading="lazy"
           /></picture>
         </li>
-        <li>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7c1">
           <picture
             ><source
               srcset="
@@ -173,7 +173,7 @@
               loading="lazy"
           /></picture>
         </li>
-        <li>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7c2"> 
           <picture
             ><source
               srcset="
@@ -188,7 +188,7 @@
               loading="lazy"
           /></picture>
         </li>
-        <li>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7c3">
           <picture
             ><source
               srcset="
