add popular-products section

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,3 +9,4 @@
 @import url('./header.css');
 @import url('./Hero-Section.css');
 @import url('./Order-Modal.css');
+@import url('./Popular-Products-Section.css');
