--- a/src/partials/Furniture-List-Section.html
+++ b/src/partials/Furniture-List-Section.html
@@ -1,5 +1,5 @@
 <section class="furniture-section">
-  <div class="container">
+  <div class="container-categories">
     <h2 class="section-title">Наші Меблі</h2>
     <p class="section-subtitle">
       Знайдіть ідеальні рішення для вашого інтер'єру
@@ -16,8 +16,8 @@
               " />
             <img
               src="/img/image-categories/A-stylish-furniture-showroom-min.png"
-              alt="all articles"
               class="img-categories"
+              alt="all articles"
               width="166"
               height="122"
               loading="lazy"
@@ -32,6 +32,7 @@
               " />
             <img
               src="/img/image-categories/A-modern-fabric-sofa-min.png"
+              class="img-categories"
               alt="Upholstered furniture"
               width="166"
               height="122"
@@ -47,6 +48,7 @@
               " />
             <img
               src="../img/image-categories/A-sleek-wooden-wardrobe-min.png"
+              class="img-categories"
               alt="Cabinets and storage systems"
               width="166"
               height="122"
@@ -62,6 +64,7 @@
               " />
             <img
               src="/img/image-categories/A-queen-size bed-min.png"
+              class="img-categories"
               alt="beds and mattresses"
               width="166"
               height="122"
@@ -77,6 +80,7 @@
               " />
             <img
               src="/img/image-categories/A-modern-oak-dining-table-min.png"
+              class="img-categories"
               alt="tables"
               width="166"
               height="122"
@@ -92,6 +96,7 @@
               " />
             <img
               src="/img/image-categories/A-set-of-four-elegant-wooden-dining-chairs-min.png"
+              class="img-categories"
               alt="chairs and stools"
               width="166"
               height="122"
@@ -107,6 +112,7 @@
               " />
             <img
               src="/img/image-categories/A-modern-open-kitchen-interior-min.png"
+              class="img-categories"
               alt="kitchens"
               width="166"
               height="122"
@@ -122,6 +128,7 @@
               " />
             <img
               src="/img/image-categories/A-bright-and-playful-children's-room-min.png"
+              class="img-categories"
               alt="children's-room"
               width="166"
               height="122"
@@ -137,6 +144,7 @@
               " />
             <img
               src="/img/image-categories/A-modern-home-min.png"
+              class="img-categories"
               alt="modern-home"
               width="166"
               height="122"
@@ -152,6 +160,7 @@
               " />
             <img
               src="/img/image-categories/A-stylish-entryway-min.png"
+              class="img-categories"
               alt="modern-home"
               width="166"
               height="122"
@@ -167,6 +176,7 @@
               " />
             <img
               src="/img/image-categories/A-contemporary-bathroom-min.png"
+              class="img-categories"
               alt="modern-home"
               width="166"
               height="122"
@@ -182,6 +192,7 @@
               " />
             <img
               src="/img/image-categories/A-cozy-outdoor-patio-scene-min.png"
+              class="img-categories"
               alt="modern-home"
               width="166"
               height="122"
@@ -197,6 +208,7 @@
               " />
             <img
               src="/img/image-categories/A-curated-collection-of-home-decor-min.png"
+              class="img-categories"
               alt="modern-home"
               width="166"
               height="122"
@@ -206,7 +218,8 @@
       </ul>
     </div>
     <ul class="furniture-list"></ul>
-
-    <button class="load-more-btn">Показати ще</button>
+    <div class="button-load-more">
+      <button class="load-more-btn">Показати ще</button>
+    </div>
   </div>
 </section>
