fix css, add link & svg

--- a/src/partials/FAQ-Section.html
+++ b/src/partials/FAQ-Section.html
@@ -1,4 +1,4 @@
-<section id="faq-section" class="faq-section">
+<section id="faq" class="faq-section">
     <div class="container">
         <h2 class="faq-title">Часті питання</h2>
         <div class="accordion-container">
@@ -87,9 +87,3 @@
         </div>
     </div>
 </section>
-
-
-
-
-
-
