--- a/src/partials/Feedback-Section.html
+++ b/src/partials/Feedback-Section.html
@@ -1,4 +1,4 @@
-<section class="feedback-section" id="#Feedback-Section">
+<section class="feedback-section" id="feedback">
   <div class="container feedback-container">
     <div class="feedback-text-wrapper">
       <h2 class="feedback-header">Відгуки клієнтів</h2>
