--- a/src/css/Furniture-List-Section.css
+++ b/src/css/Furniture-List-Section.css
@@ -1,4 +1,3 @@
-
 .section-title {
   font-weight: 700;
   font-size: 48px;
@@ -7,6 +6,7 @@
   color: #080c09;
   margin: 0;
 }
+
 .section-subtitlep {
   font-weight: 400;
   font-size: 18px;
@@ -14,10 +14,12 @@
   color: #080c09;
   margin-top: 16px;
   margin-bottom: 0;
-} */
-.our-furniture {
+}
+
+*/ .our-furniture {
   margin: 80px 64px 40px 64px;
 }
+
 .categories-list-item {
   display: flex;
   flex-direction: row;
@@ -27,12 +29,14 @@
   align-items: center;
   gap: 24px;
 }
+
 @media screen and (min-width: 1336px) {
   .gallery {
     padding-top: 112px;
     padding-bottom: 112px;
   }
 }
+
 .color-list {
   display: flex;
   align-items: center;
@@ -60,6 +64,7 @@
   width: 310px;
   height: 256px;
 }
+
 .furniture-list {
   display: flex;
   flex-wrap: wrap;
@@ -69,6 +74,7 @@
   gap: 24px;
   margin: 40px;
 }
+
 .btn-card {
   border-radius: 100px;
   padding: 10px 24px;
@@ -79,10 +85,11 @@
   line-height: 1.6;
   color: #080c09;
 }
+
 .load-more-btn {
   border-radius: 100px;
   padding: 10px 24px;
-  width: 421px;
+  width: 412px;
   height: 46px;
   box-shadow: 0 1px 2px 0 rgba(8, 12, 9, 0.05),
     inset 0 -2px 1px 0 rgba(0, 0, 0, 0.2), inset 0 0 0 1px rgba(8, 12, 9, 0.15),
@@ -94,11 +101,13 @@
 .load-more-btn:hover {
   background-color: #4f46e5;
 }
+
 .container-btn-card {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .img-categories {
   border: 8px solid #6b0609;
   border-radius: 8px;
