--- a/src/partials/Furniture-List-Section.html
+++ b/src/partials/Furniture-List-Section.html
@@ -1,4 +1,4 @@
-<section class="furniture-section">
+<section class="furniture-section" id="furniture">
   <div class="container">
     <h2 class="section-title">Наші Меблі</h2>
     <p class="section-subtitle">
@@ -8,200 +8,134 @@
     <div class="categories-list">
       <ul class="categories-list-item">
         <li data-category-id="all">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-stylish-furniture-showroom-min.png    1x,
                 /img/image-categories/A-stylish-furniture-showroom@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-stylish-furniture-showroom-min.png"
-              alt="all articles"
-              class="img-categories"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-stylish-furniture-showroom-min.png" alt="all articles"
+              class="img-categories" width="166" height="122" loading="lazy" />
+          </picture>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7b8">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-modern-fabric-sofa-min.png    1x,
                 /img/image-categories/A-modern-fabric-sofa@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-modern-fabric-sofa-min.png"
-              alt="Upholstered furniture"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-modern-fabric-sofa-min.png" alt="Upholstered furniture" width="166"
+              height="122" loading="lazy" />
+          </picture>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7b9">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-sleek-wooden-wardrobe-min.png    1x,
                 /img/image-categories/A-sleek-wooden-wardrobe@2x-min.png 2x
               " />
-            <img
-              src="../img/image-categories/A-sleek-wooden-wardrobe-min.png"
-              alt="Cabinets and storage systems"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="../img/image-categories/A-sleek-wooden-wardrobe-min.png" alt="Cabinets and storage systems"
+              width="166" height="122" loading="lazy" />
+          </picture>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7ba">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-queen-size-bed-min.png 1x,
                 /img/image-categories/A-queen-size-bed-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-queen-size bed-min.png"
-              alt="beds and mattresses"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-queen-size bed-min.png" alt="beds and mattresses" width="166" height="122"
+              loading="lazy" />
+          </picture>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7bb">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-modern-oak-dining-table-min.png    1x,
                 /img/image-categories/A-modern-oak-dining-table@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-modern-oak-dining-table-min.png"
-              alt="tables"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-modern-oak-dining-table-min.png" alt="tables" width="166" height="122"
+              loading="lazy" />
+          </picture>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7bc">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-set-of-four-elegant-wooden-dining-chairs-min.png    1x,
                 /img/image-categories/A-set-of-four-elegant-wooden-dining-chairs@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-set-of-four-elegant-wooden-dining-chairs-min.png"
-              alt="chairs and stools"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-set-of-four-elegant-wooden-dining-chairs-min.png" alt="chairs and stools"
+              width="166" height="122" loading="lazy" />
+          </picture>
         </li>
         <li data-category="66504a50a1b2c3d4e5f6a7bd">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-modern-open-kitchen-interior-min.png    1x,
                 /img/image-categories/A-modern-open-kitchen-interior@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-modern-open-kitchen-interior-min.png"
-              alt="kitchens"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-modern-open-kitchen-interior-min.png" alt="kitchens" width="166"
+              height="122" loading="lazy" />
+          </picture>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7be">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-bright-and-playful-children's-room-min.png    1x,
                 /img/image-categories/A-bright-and-playful-children's-room@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-bright-and-playful-children's-room-min.png"
-              alt="children's-room"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-bright-and-playful-children's-room-min.png" alt="children's-room"
+              width="166" height="122" loading="lazy" />
+          </picture>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7bf">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-modern-home-min.png    1x,
                 /img/image-categories/A-modern-home@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-modern-home-min.png"
-              alt="modern-home"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-modern-home-min.png" alt="modern-home" width="166" height="122"
+              loading="lazy" />
+          </picture>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7c0">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-stylish-entryway-min.png    1x,
                 /img/image-categories/A-stylish-entryway@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-stylish-entryway-min.png"
-              alt="modern-home"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-stylish-entryway-min.png" alt="modern-home" width="166" height="122"
+              loading="lazy" />
+          </picture>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7c1">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-contemporary-bathroom-min.png    1x,
                 /img/image-categories/A-contemporary-bathroom@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-contemporary-bathroom-min.png"
-              alt="modern-home"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-contemporary-bathroom-min.png" alt="modern-home" width="166" height="122"
+              loading="lazy" />
+          </picture>
         </li>
-        <li data-category-id="66504a50a1b2c3d4e5f6a7c2"> 
-          <picture
-            ><source
-              srcset="
+        <li data-category-id="66504a50a1b2c3d4e5f6a7c2">
+          <picture>
+            <source srcset="
                 /img/image-categories/A-cozy-outdoor-patio-scene-min.png    1x,
                 /img/image-categories/A-cozy-outdoor-patio-scene@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-cozy-outdoor-patio-scene-min.png"
-              alt="modern-home"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-cozy-outdoor-patio-scene-min.png" alt="modern-home" width="166"
+              height="122" loading="lazy" />
+          </picture>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7c3">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-curated-collection-of-home-decor-min.png    1x,
                 /img/image-categories/A-curated-collection-of-home-decor@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-curated-collection-of-home-decor-min.png"
-              alt="modern-home"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-curated-collection-of-home-decor-min.png" alt="modern-home" width="166"
+              height="122" loading="lazy" />
+          </picture>
         </li>
       </ul>
     </div>
