--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,22 +4,17 @@
       <nav class="footer-nav">
         <div class="footer-nav-logo">
           <a href="../index.html">
-            <svg
-              class="footer-icon-logo-company"
-              type="button"
-              width="221"
-              height="49"
-            >
+            <svg class="footer-icon-logo-company" type="button" width="221" height="49">
               <use href="./img/icons.svg#icon-company-logo"></use>
             </svg>
           </a>
         </div>
         <p class="footer-copyright desktop">&copy; 2025 Relume. Всі права захищені.</p>
         <ul class="footer-nav-list">
-          <li class="nav-link"><a href="#">Наші меблі</a></li>
-          <li class="nav-link"><a href="#">Про нас</a></li>
-          <li class="nav-link"><a href="#">Часті питання</a></li>
-          <li class="nav-link"><a href="#">Відгуки</a></li>
+          <li class="nav-link"><a href="#furniture">Наші меблі</a></li>
+          <li class="nav-link"><a href="#about">Про нас</a></li>
+          <li class="nav-link"><a href="#faq">Часті питання</a></li>
+          <li class="nav-link"><a href="#feedback">Відгуки</a></li>
         </ul>
       </nav>
       <ul class="footer-socials">
