--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,7 @@
 <header class="page-header">
     <div class="container">
         <nav class="navigation" role="navigation">
+
             <a class="logo-header" href="./index.html">
                 <svg class="icon-logo-company" type="button" width="158" height="35">
                     <use href="./img/icons.svg#icon-company-logo"></use>
@@ -14,6 +15,7 @@
                 </svg>
             </button>
 
+
             <div class="desktop-nav-group">
                 <ul class="site-navigation" id="desktop-nav">
                     <li class="link-header">
@@ -21,6 +23,9 @@
                     </li>
                     <li class="link-header">
                         <a href="#about">Про нас</a>
+                    </li>
+                    <li class="link-header">
+                        <a href="#popular">Популярне</a>
                     </li>
                     <li class="link-header">
                         <a href="#faq">Часті питання</a>
@@ -53,6 +58,9 @@
                         </li>
                         <li class="link-header">
                             <a href="#about">Про нас</a>
+                        </li>
+                        <li class="link-header">
+                            <a href="#popular">Популярне</a>
                         </li>
                         <li class="link-header">
                             <a href="#faq">Часті питання</a>
