--- a/src/css/FAQ-Section.css
+++ b/src/css/FAQ-Section.css
@@ -36,9 +36,9 @@ min-width: 335px;
     }
 }
 .ac {
-    border: none !important;
+    border: none ;
     padding: 24px 0;
-    border-top: 1px solid rgba(8, 12, 9, 0.15) !important;
+    border-top: 1px solid rgba(8, 12, 9, 0.15);
     margin-bottom: 0 !important;
     margin-bottom: 8px;
     background-color: inherit;
@@ -51,28 +51,20 @@ min-width: 335px;
     margin: 0;
     padding: 0;
 }
-.ac-header {
-    
-}
 .ac-trigger:hover,
 .ac-trigger:focus {
     color:#101828;
 }
 .ac-trigger {
-    font-family: "Raleway", sans-serif !important;
+    font-family: "Raleway", sans-serif ;
     font-weight: 700;
-    font-size: 16px !important;
-    line-height: 160% !important;
-    /* padding: 8px 32px 8px 8px; */
+    font-size: 16px ;
+    line-height: 160% ;
     display: flex !important;
     justify-content: space-between !important ;
     align-items: center;
     text-align: left;
     width: 100%;
-font-family: "Raleway", sans-serif !important;
-    font-weight: 700;
-    font-size: 16px !important;
-    line-height: 160% !important;
     padding: 0 !important;
     display: flex !important;
     justify-content: space-between;
@@ -89,7 +81,6 @@ font-family: "Raleway", sans-serif !important;
     margin: 0;
     border: 0;
     color: #080c09;
-    /* padding-right: 44px !important; */
 }
 .ac-trigger .ac-trigger-icon {
     transition: transform 250ms cubic-bezier(0.77, 0, 0.18, 1) ;
@@ -100,25 +91,22 @@ font-family: "Raleway", sans-serif !important;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.77, 0, 0.18, 1);
 }
-.ac-panel {
-
-}
 .ac-text {
 
-    font-family: var(--font-family) !important;
-    font-weight: 400 !important;
-    font-size: 16px !important;
-    line-height: 160% !important;
+    font-family: var(--font-family) ;
+    font-weight: 400 ;
+    font-size: 16px ;
+    line-height: 160% ;
 }
 @media only screen and (min-width: 768px) {
     .ac {
         padding: 20px 0;
     }
     .ac-trigger {
-        font-size: 18px !important;
+        font-size: 18px ;
     }
     .ac-text {
-        font-size: 18px !important;
+        font-size: 18px ;
         color: var(--color-);
         padding: 8px;
         margin: 0;
@@ -126,6 +114,4 @@ font-family: "Raleway", sans-serif !important;
 }
 .ac.is-active .ac-trigger .ac-trigger-icon {
     transform: rotate(-180deg);
-}
-.ac-trigger-icon {
 }
